# Paddly

./: BOM.csv  README.md
CAD/: Case_.step  Cover.step
Paddly/: Paddly.kicad_pcb  Paddly.kicad_prl  Paddly.kicad_pro  Paddly.kicad_sch  fp-info-cache
Paddly/production/: designators.csv  netlist.ipc  positions.csv
Paddly/production/Jclpcb/: bom.csv  designators.csv  netlist.ipc  positions.csv
Production/: Cover.step  DSA_.step  Encoder_knob_.step  M3 Threaded Insert_.step  M3x12 SHCS.step  M3x20 SHCS_.step  PLATE.dxf  Plate.step
Production/Sourcing files/: Case_.f3d  DSA 1u v2.f3d  M3 Threaded Insert v3.f3d  M3x12 SHCS_.f3d  M3x20 SHCS_.f3d  Plate.f3d  knurled_knob v12.f3d
firmware/paddly_kmk_firmware/: code.py
firmware/paddly_kmk_firmware/adafruit-circuitpython-bundle-10.x-mpy-20260606/: VERSIONS.txt
firmware/paddly_kmk_firmware/adafruit-circuitpython-bundle-10.x-mpy-20260606/examples/ads1x15/: ads1x15_fast_read.py
firmware/paddly_kmk_firmware/adafruit-circuitpython-bundle-10.x-mpy-20260606/examples/apds9999/: apds9999_automatic_rgb_test.py
firmware/paddly_kmk_firmware/adafruit-circuitpython-bundle-10.x-mpy-20260606/examples/as7343/: as7343_fulltest.py
firmware/paddly_kmk_firmware/adafruit-circuitpython-bundle-10.x-mpy-20260606/examples/bluefruitspi/: bluefruitspi_ruggedechotest.py  bluefruitspi_simpletest.py
firmware/paddly_kmk_firmware/adafruit-circuitpython-bundle-10.x-mpy-20260606/examples/bme680/: bme680_spi.py  (+1 more)
firmware/paddly_kmk_firmware/adafruit-circuitpython-bundle-10.x-mpy-20260606/lib/: adafruit_24lc32.mpy  adafruit_74hc595.mpy  adafruit_acep7in.mpy  adafruit_ad569x.mpy  adafruit_adg72x.mpy  adafruit_adt7410.mpy  adafruit_adxl34x.mpy  adafruit_adxl37x.mpy  adafruit_ags02ma.mpy  adafruit_am2320.mpy  adafruit_amg88xx.mpy  adafruit_anchored_group.mpy  adafruit_anchored_tilegrid.mpy  adafruit_apds9999.mpy  adafruit_argv_file.mpy  adafruit_as5600.mpy  adafruit_as726x.mpy  adafruit_as7331.mpy  adafruit_as7341.mpy  adafruit_as7343.mpy  adafruit_avrprog.mpy  adafruit_aw9523.mpy  adafruit_aws_iot.mpy  adafruit_bd3491fs.mpy  adafruit_bh1750.mpy  adafruit_binascii.mpy  adafruit_bitbangio.mpy  adafruit_bitmapsaver.mpy  adafruit_ble_apple_media.mpy  adafruit_ble_beacon.mpy  adafruit_ble_broadcastnet.mpy  adafruit_ble_cycling_speed_and_cadence.mpy  adafruit_ble_file_transfer.mpy  adafruit_ble_heart_rate.mpy  adafruit_ble_ibbq.mpy  adafruit_ble_lywsd03mmc.mpy  adafruit_ble_magic_light.mpy  adafruit_ble_midi.mpy  adafruit_ble_radio.mpy  adafruit_bluefruitspi.mpy  (+209 more)
firmware/paddly_kmk_firmware/adafruit-circuitpython-bundle-10.x-mpy-20260606/requirements/adafruit_fona/: pyproject.toml
firmware/paddly_kmk_firmware/adafruit-circuitpython-bundle-10.x-mpy-20260606/requirements/adafruit_pixel_framebuf/: pyproject.toml
(+389 files in other folders)
