# SPDX-FileCopyrightText: 2022 Alec Delaney for Adafruit Industries
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "adafruit-circuitpython-pixel-framebuf"
description = "Neopixel and Dotstar Framebuffer Helper"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Adafruit Industries", email = "circuitpython@adafruit.com"}
]
urls = {Homepage = "https://github.com/adafruit/Adafruit_CircuitPython_Pixel_Framebuf"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "pixel_framebuf",
    "neopixel",
    "framebuf",
    "framebuffer",
    "dotstar",
    "matrix",
    "animation",
    "led",
    "ws2812",
    "ap102",
]
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
py-modules = ["adafruit_pixel_framebuf"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
